--- a/_config.yml
+++ b/_config.yml
@@ -110,11 +110,10 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "for the code"
   location         : "Seoul, South Korea"
-  email            :
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-       #url: "mailto:hsco.dev@gmail.com"
+       url: "mailto:hsco.dev@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
        url: "https://hsco.dev"
