--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "dark" #"default" "air", "aqua", "contrast", "dark", 
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "HS Space"
+title                    : "CODEV's great archive"
 title_separator          : "-"
 name                     : "Kim Hyoung-Seok"
 description              : "An amazing website."
@@ -109,7 +109,7 @@ author:
   name             : "Kim Hyoung-Seok"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an amazing person."
-  location         : "Somewhere"
+  location         : "Seoul, Republic of Korea"
   email            :
   links:
     - label: "Email"
