--- a/_config.yml
+++ b/_config.yml
@@ -293,3 +293,17 @@ defaults:
       comments: # true
       share: true
       related: true
+
+collections:
+  docs:
+    output: true
+    permalink: /:collection/:path/
+  recipes:
+    output: true
+    permalink: /:collection/:path/
+  pets:
+    output: true
+    permalink: /:collection/:path/
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
