--- a/_config.yml
+++ b/_config.yml
@@ -293,6 +293,13 @@ defaults:
       comments: # true
       share: true
       related: true
+  - scope:
+      path: ""
+      type: portfolio
+   values:
+      layout: single
+      author_profile: false
+      share: true
 
 collections:
   docs:
