--- a/_config.yml
+++ b/_config.yml
@@ -300,6 +300,13 @@ defaults:
       layout: single
       author_profile: false
       share: true
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
 
 collections:
   docs:
