--- a/_config.yml
+++ b/_config.yml
@@ -109,6 +109,7 @@ author:
   name             : "Kim Hyoung-Seok"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an amazing person."
+  location         : "Seoul, Republic of Korea"
   location         : "Seoul"
   email            :
   links:
@@ -278,6 +279,7 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+
 
 # Defaults
 defaults:
